lj3 fix spacing in css

--- a/des157/lj/style.css
+++ b/des157/lj/style.css
@@ -47,7 +47,6 @@ header{
 }
 #article4-column{
     background-color: #FAF3DD;
-
     color: #343841fa;
 }
 
@@ -63,13 +62,14 @@ header{
     background-color: #e9cde6;
 }
 
-
 #article4, #article3, #article2, #article1 {
     line-height: 1.6;
     margin-bottom: 50%;
 }
 
-figure {margin:0} 
+figure {
+    margin:0;
+} 
 
 button{
     text-decoration: none;
@@ -87,11 +87,11 @@ h2{
     display: none;
 }
 
-.visible {
+.visible{
   visibility:visible;
 }
 
-footer {
+footer{
     position: fixed;
     top: 718px;
     height: 50px;
@@ -109,11 +109,11 @@ footer a{
     color: #FFFFFF;
 }
 
-a {
+a{
     text-decoration: none;
     color: dodgerblue;
 }
 
-a:hover {
+a:hover{
     color: rgb(42, 88, 135);
 }
